syntax = "proto3";

package tutorial;

// Go のパッケージパスを指定
option go_package = "./generated;tutorial";

message Person {
  string name = 1;
  repeated PhoneNumber phone_numbers = 2;
}

enum PhoneType {
  MOBILE = 0;
  HOME = 1;
  WORK = 2;
}

message PhoneNumber {
  string number = 1;
  PhoneType type = 2;
}
